# catsu

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml  sync-check.yml  test.yml
docs/: .gitignore  next.config.mjs  open-next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  spilled-milk.md  wrangler.jsonc
docs/app/: flexoki-theme.css  global.css  layout.tsx
docs/app/(docs)/: layout.tsx
docs/app/(docs)/[[...slug]]/: page.tsx
docs/content/docs/: error-handling.mdx  index.mdx  installation.mdx  meta.json  quick-start.mdx
docs/content/docs/best-practices/: async-usage.mdx  batch-processing.mdx  cost-tracking.mdx  index.mdx  model-selection.mdx  rate-limiting.mdx
docs/content/docs/client-api/: aembed-method.mdx  (+5 more)
docs/lib/: layout.shared.tsx
examples/: README.md  cloudflare.py  cohere.py  deepinfra.py  gemini.py  jina.py  latency_test.py  list_providers.py  mistral.py  mixedbread.py  nomic.py  openai.py  openai_example.py  openai_query_example.py  test_all_providers.py  together.py  voyage.py  voyageai.py
src/: catalog.rs  client.rs  http.rs  lib.rs
src/catsu/: __init__.py  client.py  models.py
src/catsu/data/: models.json
src/catsu/providers/: __init__.py  base.py  cloudflare.py  cohere.py  gemini.py  jinaai.py  mistral.py  mixedbread.py  nomic.py  openai.py  registry.py  voyageai.py
src/catsu/utils/: __init__.py  errors.py  tokenizers.py
src/data/: models.json
src/mimie/: __init__.py  catalog.py  client.py  models.py
src/mimie/data/: models.json
src/mimie/providers/: __init__.py  base.py  registry.py  voyageai.py
src/mimie/utils/: errors.py
src/providers/: cohere.rs  deepinfra.rs  gemini.rs  jina.rs  mistral.rs  mixedbread.rs  nomic.rs  together.rs
tests/: __init__.py  conftest.py  test_catalog.py  test_client.py  test_errors.py  test_models.py
tests/providers/: test_cloudflare.py  test_cohere.py  test_deepinfra.py  test_gemini.py  test_jinaai.py  test_mistral.py  test_mixedbread.py  test_nomic.py  test_togetherai.py  test_voyageai.py
website/: README.md  package-lock.json  package.json  wrangler.jsonc
website/public/: models.json
website/src/: models.json
website/src/components/: AboutModal.tsx  ModelsTable.tsx  ModelsTableWithSearch.tsx
website/src/pages/: index.astro
website/src/styles/: global.css
(+16 files in other folders)
